--- a/exec/포팅_메뉴얼_.md
+++ b/exec/포팅_메뉴얼_.md
@@ -94,8 +94,142 @@ docker run --name rabbitmq --network link-network -d -p 5671:5671 -p 5672:5672 -
 
 ### sonarqube.py
 
-> `sonarqube.[py](http://main.py)` 링크 첨부해주세요.
-> 
+```python
+import os
+import subprocess
+import pika
+import time
+import json
+
+def find_folders(directory, folder_name):
+    found_folders = []
+    for root, dirs, files in os.walk(directory):
+        if folder_name in dirs:
+            found_folders.append(os.path.join(root, folder_name))
+    return found_folders
+
+def find(d:str, s : str):
+    folder_to_find = s
+    starting_directory = d
+
+    # 폴더를 찾고 결과를 출력
+    result = find_folders(starting_directory, folder_to_find)
+    data = ""
+    if result:
+        for folder_path in result:
+            data = folder_path
+            break
+    return data
+
+def getRepository(repository_url: str) -> None:
+    repository_name = ""
+    for i in range(len(repository_url)-1, -1, -1):
+        if repository_url[i] == "/":
+            break
+        repository_name += repository_url[i]
+    repository_name = repository_name[::-1]
+    print(repository_name)
+    return repository_name
+def analyze(repository_url: str, repository_name: str) -> str:
+    try:
+        project_key = "iLoveAespa"
+
+        # SonarQube API 엔드포인트
+        api_endpoint = "http://localhost:9000/api/projects/delete"
+
+        # SonarQube API에 요청을 보내어 프로젝트를 삭제하는 명령
+        command = f'curl -u admin:root -X POST "{api_endpoint}?project={project_key}"'
+
+        # 명령 실행
+        os.system(command)
+        os.system(f"git clone {repository_url}.git")
+        os.system(f"cd {repository_name}")
+        os.system("rm sonar-project.properties")
+        os.system("touch sonar-project.properties")
+        os.system("cat /dev/null > sonar-project.properties")
+        os.system("echo sonar.login=admin >> sonar-project.properties")
+        os.system("echo sonar.password=admin >> sonar-project.properties")
+        os.system("echo sonar.projectKey=iLoveAespa >> sonar-project.properties")
+        os.system("echo sonar.projectName=iLoveAespa >> sonar-project.properties")
+        os.system("echo sonar.sourceEncoding=UTF-8 >> sonar-project.properties")
+        os.system("echo sonar.sources="+find(repository_name,'java').replace('\\', '/')+" >> sonar-project.properties")
+        os.system("echo sonar.java.binaries="+find(repository_name,'wrapper').replace('\\', '/')+" >> sonar-project.properties")
+        os.system("sonar-scanner -X")
+
+        time.sleep(5)
+        # uri = "http://localhost:9000/api/measures/search?projectKeys=iLoveAespa&metricKeys=alert_status,bugs,reliability_rating,vulnerabilities,security_rating,security_hotspots_reviewed,security_review_rating,code_smells,sqale_rating,duplicated_lines_density,coverage,ncloc,ncloc_language_distribution,projects"
+        uri = "http://localhost:9000/api/issues/search?pageSize=500&componentKeys=iLoveAespa"
+        username = "admin"
+        password = "admin"
+
+        # URL을 따옴표로 묶음
+        command = f'curl -u "{username}:{password}" "{uri}"'
+
+
+        # subprocess.run을 수정하여 shell=True를 사용하고, 전체 명령어를 문자열로 전달
+        result = subprocess.run(command, shell=True, stdout=subprocess.PIPE, text=True)
+        # print(result.stdout)
+        # result = subprocess.run("curl -u admin:root http://localhost:9000/api/measures/search?projectKeys=iLoveAespa%2Ctest-projectKey&metricKeys=alert_status%2Cbugs%2Creliability_rating%2Cvulnerabilities%2Csecurity_rating%2Csecurity_hotspots_reviewed%2Csecurity_review_rating%2Ccode_smells%2Csqale_rating%2Cduplicated_lines_density%2Ccoverage%2Cncloc%2Cncloc_language_distribution%2Cprojects", shell=True, stdout=subprocess.PIPE)
+        return result.stdout
+    except:
+        print()
+
+def analyzeTypes(repository_url: str, repository_name: str) -> str :
+    try:
+        uri = "http://localhost:9000/api/measures/search?projectKeys=iLoveAespa&metricKeys=alert_status,bugs,reliability_rating,vulnerabilities,security_rating,security_hotspots_reviewed,security_review_rating,code_smells,sqale_rating,duplicated_lines_density,coverage,ncloc,ncloc_language_distribution,projects"
+        username = "admin"
+        password = "admin"
+
+        # URL을 따옴표로 묶음
+        command = f'curl -u "{username}:{password}" "{uri}"'
+        # subprocess.run을 수정하여 shell=True를 사용하고, 전체 명령어를 문자열로 전달
+        result = subprocess.run(command, shell=True, stdout=subprocess.PIPE, text=True)
+        print(result)
+        # result = subprocess.run("curl -u admin:root http://localhost:9000/api/measures/search?projectKeys=iLoveAespa%2Ctest-projectKey&metricKeys=alert_status%2Cbugs%2Creliability_rating%2Cvulnerabilities%2Csecurity_rating%2Csecurity_hotspots_reviewed%2Csecurity_review_rating%2Ccode_smells%2Csqale_rating%2Cduplicated_lines_density%2Ccoverage%2Cncloc%2Cncloc_language_distribution%2Cprojects", shell=True, stdout=subprocess.PIPE)
+        return result.stdout
+    except:
+        print()
+def on_request(ch, method, properties, body):
+    # url = body.decode()
+    received_message = body.decode('utf-8')
+    message_parts = received_message.split(' ')
+    project_id = message_parts[0]
+    url = message_parts[1]
+    print(" [x] Received URL:", url)
+    message_response = analyze(url,getRepository(url))
+    type_response = analyzeTypes(url,getRepository(url))
+    print(f" [x] Response URL: {url}")
+    response_data = {
+        "project_id": project_id,
+        "message_response" : message_response,
+        "type_response" : type_response
+    }
+    response = json.dumps(response_data, indent=2)  # JSON 문자열로 변환 및 들여쓰기
+    create_response(response)
+    ch.basic_ack(delivery_tag=method.delivery_tag)
+
+def create_response(response) :
+    connection = pika.BlockingConnection(pika.ConnectionParameters(host='rabbitmq'))
+    channel = connection.channel()
+
+    # queue_declare: channel를 통해 queue 선언(declare)
+    # channel.queue_declare(queue='sonarqube_response_queue')
+    # 메시지를 RabbitMQ 큐에 전송
+    channel.basic_publish(exchange='sonarqube_response', routing_key='sonarqube_response_queue', body=response)
+    print(" [x] Sent 'response!'")
+    # 연결 종료
+    connection.close()
+
+connection = pika.BlockingConnection(pika.ConnectionParameters('rabbitmq'))
+channel = connection.channel()
+
+
+channel.basic_qos(prefetch_count=1)
+channel.basic_consume(queue='sonarqube_queue', on_message_callback=on_request)
+
+print(" [x] Awaiting RPC requests")
+channel.start_consuming()
+```
 
 ### Requirements.txt
 
@@ -149,8 +283,91 @@ nohup python3 sonarqube.py &
 
 ### lighthouse.py
 
-> [`lighthouse.py`](http://lighthouse.py) 링크 첨부해주세요.
-> 
+```python
+import pika
+import subprocess
+import time
+import json
+import re
+
+
+def remove_text(input_string):
+    pattern = r"\([^)]*\)|\[[^\]]*\]"
+    result = re.sub(pattern, "", input_string)
+    return result
+
+
+def analyze_with_lighthouse(url):
+    start_time = time.time()  # 작업 시작 시간 기록
+    projectId = url.split(" ")[0]
+    urlList = json.loads(url.split(" ")[1])
+    requiredInfoJsonList = []
+
+    for url in urlList:
+        command = f"lighthouse {url} --output=json --quiet --no-enable-error-reporting --locale=ko --chrome-flags=\"--headless\""
+        result = subprocess.run(command, shell=True, stdout=subprocess.PIPE)
+        categories = json.loads(result.stdout)['categories']
+        audits = json.loads(result.stdout)['audits']
+        temp = {
+            details['title']: {
+                'score': details['score'],
+                'description': remove_text(details.get('description', '')),
+                'manualDescription': remove_text(details.get('manualDescription', '')),
+                'audits': [
+                    {
+                        'title': audits[item['id']]['title'],
+                        'description': remove_text(audits[item['id']]['description']),
+                        'score': audits[item['id']]['score'],
+                    }
+                    for item in details['auditRefs'] if
+                    audits[item['id']]['score'] is not None and audits[item['id']]['score'] < 1
+                ]
+            } for category, details in categories.items()
+        }
+        for category_details in temp.values():
+            category_details['audits'] = sorted(category_details['audits'], key=lambda x: x['score'])
+        required_info_json = {
+            'url': url,
+            'detail': json.dumps(temp),
+        }
+        requiredInfoJsonList.append(required_info_json)
+
+    end_time = time.time()  # 작업 종료 시간 기록
+    elapsed_time = end_time - start_time  # 작업 시간 계산
+    response = {"projectId": projectId, "data": requiredInfoJsonList}
+    return json.dumps(response), elapsed_time  # 작업 결과와 시간 반환
+
+
+def on_request(ch, method, properties, body):
+    url = body.decode()
+    print(" [x] Received URL:", url)
+
+    response, elapsed_time = analyze_with_lighthouse(url)
+
+    print(f" [x] Response URL: {url}, Elapsed Time: {elapsed_time:.2f} seconds\n")
+    # 교환기 선언 - 지속성 추가
+    channel.exchange_declare(exchange='lighthouse_response', exchange_type='topic', durable=True)
+
+    # 메시지 발행
+    channel.basic_publish(exchange='lighthouse_response',
+                          routing_key='lighthouse_response_queue',
+                          body=response)
+
+    # 메시지 확인 응답
+    ch.basic_ack(delivery_tag=method.delivery_tag)
+
+
+connection = pika.BlockingConnection(pika.ConnectionParameters('localhost'))
+channel = connection.channel()
+
+channel.queue_declare(queue='lighthouse_queue')
+
+channel.basic_qos(prefetch_count=1)
+channel.basic_consume(queue='lighthouse_queue', on_message_callback=on_request)
+
+print(" [x] Awaiting RPC requests")
+channel.start_consuming()
+```
 
 ```bash
 npm install lighthouse
@@ -386,55 +603,55 @@ server:
 ## # 1 - 팀빌딩 (팀장)
 
 1. 참여하고 싶은 해커톤에 팀을 생성한다.
-    
-    ![모집중인 헤커톤.PNG](etc/모집중인%20해커톤.png)
-    
+
+   ![모집중인 헤커톤.PNG](etc/모집중인%20해커톤.png)
+
 2. 팀원을 구하기 위해 등록된 사람들을 탐색한다.
-    
-    ![팀원 구하기.PNG](etc/팀원%20구하기.png)
-    
+
+   ![팀원 구하기.PNG](etc/팀원%20구하기.png)
+
 3. 마음에 드는 사람에게 합류를 제안한다.
-    
-    ![팀원구하기 모달.PNG](etc/사용지%20상세.png)
-    
+
+   ![팀원구하기 모달.PNG](etc/사용지%20상세.png)
+
 4. 합류를 제안하면서 면접을 예약할 수 있다.
-    
-    ![면접예약 모달.PNG](etc/예약.png)
-    
+
+   ![면접예약 모달.PNG](etc/예약.png)
+
 5. 현재 팀원 제안 및 신청 현황은 마이페이지에서 확인할 수 있다.
-    
-    ![모집중인 팀.PNG](etc/내가%20모집중인%20팀.png)
-    
+
+   ![모집중인 팀.PNG](etc/내가%20모집중인%20팀.png)
+
 6. 제안 받은 사람도 마이페이지에서  확인할 수 있다.
-    
-    ![권유받은 팀.PNG](etc/내가%20신청한%20팀.png)
-    
+
+   ![권유받은 팀.PNG](etc/내가%20신청한%20팀.png)
+
 7. 화상 면접을 할 수 있다.
-    
-    ![화상 면접.PNG](etc/화상%20면접%20진행중.png)
-    
+
+   ![화상 면접.PNG](etc/화상%20면접%20진행중.png)
+
 
 ## # 2 - 팀빌딩 (팀원)
 
 1. 팀원은 참가 신청을 할 수 있다.
-    
-    ![모집중인 헤커톤.PNG](etc/모집중인%20해커톤1.png)
-    
+
+   ![모집중인 헤커톤.PNG](etc/모집중인%20해커톤1.png)
+
 2. 신청한 팀은 마이페이지에서 확인할 수 있다.
-    
-    ![신청한 팀.PNG](etc/내가%20신청한%20팀.png)
-    
+
+   ![신청한 팀.PNG](etc/내가%20신청한%20팀.png)
+
 
 ## # 3 - 프로젝트 분석
 
 1. 내 프로젝트를 확인할 수 있다.
-    
-    ![Untitled](etc/프로젝트%20상세.png)
-    
+
+   ![Untitled](etc/프로젝트%20상세.png)
+
 2. 프론트엔드를 테스트할 수 있다.
-    
-    ![프론트엔드 분석 결과.PNG](etc/프론트%20분석%20상세.png)
-    
+
+   ![프론트엔드 분석 결과.PNG](etc/프론트%20분석%20상세.png)
+
 3. 백엔드를 테스트할 수 있다.
-    
-    ![백엔드 분석 결과.PNG](etc/백엔드%20분석%20상세.png)
+
+   ![백엔드 분석 결과.PNG](etc/백엔드%20분석%20상세.png)
